[gd_scene load_steps=44 format=2]

[ext_resource path="res://scenes/world/left_boss/left_boss.gd" type="Script" id=1]
[ext_resource path="res://textures/environment/tiles.png" type="Texture" id=2]
[ext_resource path="res://tilesets/world_tileset.gd" type="Script" id=3]
[ext_resource path="res://classes/level_trigger.gd" type="Script" id=4]
[ext_resource path="res://textures/entities/left_enemy.png" type="Texture" id=5]
[ext_resource path="res://scenes/player/player.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/world/left_boss/boss.gd" type="Script" id=7]
[ext_resource path="res://sounds/boss_damage.wav" type="AudioStream" id=8]

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 12, 16, 0, 16, 0, 4, 12, 4 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 12, 16, 0, 16, 0, 0, 12, 0 )

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PoolVector2Array( 12, 12, 0, 12, 0, 0, 12, 0 )

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PoolVector2Array( 16, 12, 0, 12, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=26]
points = PoolVector2Array( 4, 0, 16, 0, 16, 12, 4, 12 )

[sub_resource type="ConvexPolygonShape2D" id=27]
points = PoolVector2Array( 4, 0, 16, 0, 16, 16, 4, 16 )

[sub_resource type="ConvexPolygonShape2D" id=28]
points = PoolVector2Array( 16, 16, 4, 16, 4, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=29]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=30]
points = PoolVector2Array( 0, 0, 0, 0, 12, 0, 12, 4, 16, 4, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=31]
points = PoolVector2Array( 0, 0, 16, 0, 16, 12, 12, 12, 12, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=32]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 4, 16, 4, 12, 0, 12 )

[sub_resource type="ConvexPolygonShape2D" id=33]
points = PoolVector2Array( 0, 4, 4, 4, 4, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=34]
0/name = "tiles.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tiles.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
4/name = "tiles.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 32, 0, 80, 48 )
4/tile_mode = 1
4/autotile/bitmask_mode = 1
4/autotile/bitmask_flags = [ Vector2( 0, 1 ), 510, Vector2( 0, 2 ), 447, Vector2( 1, 1 ), 507, Vector2( 1, 2 ), 255, Vector2( 2, 0 ), 432, Vector2( 2, 1 ), 438, Vector2( 2, 2 ), 54, Vector2( 3, 0 ), 504, Vector2( 3, 1 ), 511, Vector2( 3, 2 ), 63, Vector2( 4, 0 ), 216, Vector2( 4, 1 ), 219, Vector2( 4, 2 ), 27 ]
4/autotile/icon_coordinate = Vector2( 3, 1 )
4/autotile/tile_size = Vector2( 16, 16 )
4/autotile/spacing = 0
4/autotile/occluder_map = [  ]
4/autotile/navpoly_map = [  ]
4/autotile/priority_map = [  ]
4/autotile/z_index_map = [  ]
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 5 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "tiles.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 16, 16, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 19 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "tiles.png 6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 16, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 20 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "tiles.png 7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 32, 48, 80, 48 )
7/tile_mode = 1
7/autotile/bitmask_mode = 1
7/autotile/bitmask_flags = [ Vector2( 0, 1 ), 510, Vector2( 0, 2 ), 447, Vector2( 1, 1 ), 507, Vector2( 1, 2 ), 255, Vector2( 2, 0 ), 432, Vector2( 2, 1 ), 438, Vector2( 2, 2 ), 54, Vector2( 3, 0 ), 504, Vector2( 3, 1 ), 511, Vector2( 3, 2 ), 63, Vector2( 4, 0 ), 216, Vector2( 4, 1 ), 219, Vector2( 4, 2 ), 27 ]
7/autotile/icon_coordinate = Vector2( 3, 1 )
7/autotile/tile_size = Vector2( 16, 16 )
7/autotile/spacing = 0
7/autotile/occluder_map = [  ]
7/autotile/navpoly_map = [  ]
7/autotile/priority_map = [  ]
7/autotile/z_index_map = [  ]
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "tiles.png 8"
8/texture = ExtResource( 2 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 112, 0, 80, 48 )
8/tile_mode = 1
8/autotile/bitmask_mode = 1
8/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 3, 0 ), 255, Vector2( 3, 1 ), 507, Vector2( 4, 0 ), 447, Vector2( 4, 1 ), 510 ]
8/autotile/icon_coordinate = Vector2( 1, 1 )
8/autotile/tile_size = Vector2( 16, 16 )
8/autotile/spacing = 0
8/autotile/occluder_map = [  ]
8/autotile/navpoly_map = [  ]
8/autotile/priority_map = [  ]
8/autotile/z_index_map = [  ]
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 21 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 24 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 26 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 27 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 28 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 29 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 30 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 31 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 32 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 33 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "tiles.png 9"
9/texture = ExtResource( 2 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 112, 48, 16, 16 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "tiles.png 10"
10/texture = ExtResource( 2 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 128, 48, 16, 16 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
script = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=37]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=38]
resource_name = "attack"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=40]
resource_name = "death"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=39]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 12, 24 )

[node name="Level" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
_active_camera_path = NodePath("YSort/Player/CamerMovementOffset/Camera2D")
level_music = "res://music/something_is_near.mp3"

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 34 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -1, 4, 2, -65536, 4, 3, -65535, 4, 3, -65534, 4, 3, -65533, 4, 3, -65532, 4, 3, -65531, 4, 3, -65530, 4, 3, -65529, 4, 3, -65528, 4, 3, -65527, 4, 3, -65526, 4, 3, -65525, 4, 3, -65524, 4, 3, -65523, 4, 3, -65522, 4, 3, -65521, 4, 3, -65520, 4, 3, -65519, 4, 3, -65518, 4, 3, -65517, 4, 3, -65516, 4, 3, -65515, 4, 4, 65535, 4, 65538, 0, 4, 65539, 1, 4, 65539, 2, 4, 65539, 3, 4, 65539, 4, 4, 65539, 5, 4, 65539, 6, 4, 65539, 7, 4, 65539, 8, 4, 65539, 9, 4, 65539, 10, 4, 65539, 11, 4, 65539, 12, 4, 65539, 13, 4, 65539, 14, 4, 65539, 15, 4, 65539, 16, 4, 65539, 17, 4, 65539, 18, 4, 65539, 19, 4, 65539, 20, 4, 65539, 21, 4, 65540, 131071, 4, 65538, 65536, 4, 131073, 65537, 4, 131075, 65538, 4, 131075, 65539, 4, 131075, 65540, 4, 131075, 65541, 4, 131075, 65542, 4, 131075, 65543, 4, 131075, 65544, 4, 131075, 65545, 4, 131075, 65546, 4, 131072, 65547, 4, 65539, 65548, 4, 65539, 65549, 4, 65539, 65550, 4, 65539, 65551, 4, 65539, 65552, 4, 65539, 65553, 4, 65539, 65554, 4, 65539, 65555, 4, 65539, 65556, 4, 65539, 65557, 4, 65540, 196607, 4, 65538, 131072, 4, 65540, 131073, 5, 0, 131074, 6, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 6, 0, 131082, 4, 131074, 131083, 4, 131075, 131084, 4, 131072, 131085, 4, 65539, 131086, 4, 65539, 131087, 4, 65539, 131088, 4, 65539, 131089, 4, 65539, 131090, 4, 65539, 131091, 4, 65539, 131092, 4, 65539, 131093, 4, 65540, 262143, 4, 65538, 196608, 4, 65540, 196609, 6, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 6, 0, 196620, 4, 131074, 196621, 4, 131075, 196622, 4, 131075, 196623, 4, 131075, 196624, 4, 131075, 196625, 4, 131075, 196626, 4, 131075, 196627, 4, 131075, 196628, 4, 131075, 196629, 4, 131076, 327679, 4, 65538, 262144, 4, 65540, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 393215, 4, 65538, 327680, 4, 65540, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 458751, 4, 65538, 393216, 4, 65540, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 524287, 4, 65538, 458752, 4, 65540, 458753, 6, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 4, 2, 458764, 4, 3, 458765, 4, 3, 458766, 4, 3, 458767, 4, 3, 458768, 4, 3, 458769, 4, 3, 458770, 4, 3, 458771, 4, 3, 458772, 4, 3, 458773, 4, 4, 589823, 4, 65538, 524288, 4, 65540, 524289, 6, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 6, 0, 524299, 4, 65538, 524300, 4, 65539, 524301, 4, 65539, 524302, 4, 65539, 524303, 4, 65539, 524304, 4, 65539, 524305, 4, 65539, 524306, 4, 65539, 524307, 4, 65539, 524308, 4, 65539, 524309, 4, 65540, 655359, 4, 65538, 589824, 4, 65537, 589825, 4, 4, 589826, 5, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 5, 0, 589833, 5, 0, 589834, 4, 2, 589835, 4, 65536, 589836, 4, 65539, 589837, 4, 65539, 589838, 4, 65539, 589839, 4, 65539, 589840, 4, 65539, 589841, 4, 65539, 589842, 4, 65539, 589843, 4, 65539, 589844, 4, 65539, 589845, 4, 65540, 720895, 4, 65538, 655360, 4, 65539, 655361, 4, 65537, 655362, 4, 4, 655363, 5, 0, 655364, 6, 0, 655365, 0, 0, 655366, 6, 0, 655367, 5, 0, 655368, 4, 2, 655369, 4, 3, 655370, 4, 65536, 655371, 4, 65539, 655372, 4, 65539, 655373, 4, 65539, 655374, 4, 65539, 655375, 4, 65539, 655376, 4, 65539, 655377, 4, 65539, 655378, 4, 65539, 655379, 4, 65539, 655380, 4, 65539, 655381, 4, 65540, 786431, 4, 65538, 720896, 4, 65539, 720897, 4, 65539, 720898, 4, 65537, 720899, 4, 3, 720900, 4, 3, 720901, 4, 3, 720902, 4, 3, 720903, 4, 3, 720904, 4, 65536, 720905, 4, 65539, 720906, 4, 65539, 720907, 4, 65539, 720908, 4, 65539, 720909, 4, 65539, 720910, 4, 65539, 720911, 4, 65539, 720912, 4, 65539, 720913, 4, 65539, 720914, 4, 65539, 720915, 4, 65539, 720916, 4, 65539, 720917, 4, 65540, 851967, 4, 131074, 786432, 4, 131075, 786433, 4, 131075, 786434, 4, 131075, 786435, 4, 131075, 786436, 4, 131075, 786437, 4, 131075, 786438, 4, 131075, 786439, 4, 131075, 786440, 4, 131075, 786441, 4, 131075, 786442, 4, 131075, 786443, 4, 131075, 786444, 4, 131075, 786445, 4, 131075, 786446, 4, 131075, 786447, 4, 131075, 786448, 4, 131075, 786449, 4, 131075, 786450, 4, 131075, 786451, 4, 131075, 786452, 4, 131075, 786453, 4, 131076 )

[node name="YSort" type="YSort" parent="."]

[node name="Boss" type="StaticBody2D" parent="YSort" groups=["enemy"]]
position = Vector2( 96, 80 )
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="YSort/Boss"]
texture = ExtResource( 5 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Boss"]
shape = SubResource( 36 )

[node name="BossAnimations" type="AnimationPlayer" parent="YSort/Boss"]
anims/RESET = SubResource( 37 )
anims/attack = SubResource( 38 )
anims/death = SubResource( 40 )
anims/idle = SubResource( 39 )

[node name="AttackTimer" type="Timer" parent="YSort/Boss"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="DamageSound" type="AudioStreamPlayer" parent="YSort/Boss"]
stream = ExtResource( 8 )

[node name="Player" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 328, 88 )

[node name="CamerMovementOffset" type="Position2D" parent="YSort/Player"]
position = Vector2( 0, -12 )

[node name="Camera2D" type="Camera2D" parent="YSort/Player/CamerMovementOffset"]
current = true

[node name="CameraBounds" type="Control" parent="."]
margin_right = 336.0
margin_bottom = 192.0

[node name="LevelTrigger" type="Area2D" parent="."]
position = Vector2( 336, 64 )
script = ExtResource( 4 )
scene_path = "res://scenes/world/rocky_field/rocky_field.tscn"
player_position = Vector2( 8, 88 )
player_facing_direction = Vector2( 1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelTrigger"]
position = Vector2( 12, 24 )
shape = SubResource( 35 )

[connection signal="boss_died" from="YSort/Boss" to="." method="_on_Boss_boss_died"]
[connection signal="animation_finished" from="YSort/Boss/BossAnimations" to="." method="_on_BossAnimations_animation_finished"]
[connection signal="timeout" from="YSort/Boss/AttackTimer" to="." method="_on_AttackTImer_timeout"]
